src/tests/snapshots/gitu__tests__pull__pull_setup_upstream_same_as_head.snap
---
source: src/tests/pull.rs
expression: ctx.redact_buffer()
---
▌On branch new-branch                                                           |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main new-branch origin/main add initial-file            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch --set-upstream-to new-branch                                       |
warning: not setting branch 'new-branch' as its own upstream                    |
styles_hash: 3f964eeb1cca6c39
