src/tests/snapshots/gitu__tests__pull__pull_upstream.snap
---
source: src/tests/pull.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                                                         |
▌Your branch is up to date with 'origin/main'.                                                                          |
                                                                                                                        |
 Recent commits                                                                                                         |
 d07f2d3 main origin/main add remote-file                                                                Author Name __ |
 b66a0bf add initial-file                                                                                Author Name __ |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
                                                                                                                        |
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────|
$ git pull origin refs/heads/main                                                                                       |
From file://                                                                                                             
 * branch            main       -> FETCH_HEAD                                                                           |
   b66a0bf..d07f2d3  main       -> origin/main                                                                          |
Updating b66a0bf..d07f2d3                                                                                               |
Fast-forward                                                                                                            |
 remote-file | 1 +                                                                                                      |
 1 file changed, 1 insertion(+)                                                                                         |
 create mode 100644 remote-file                                                                                         |
styles_hash: 777dffb6900c18bd
